# Todo-app

./: .gitignore  DEPLOYMENT.md  README.md  STARTUP.md  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  alembic.ini  api.py  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tasks_table.py  002_create_users_table.py  003_add_user_id_to_tasks.py
backend/src/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/src/events/: __init__.py  event_schemas.py  kafka_producer.py
backend/src/routers/: auth.py  tasks.py
backend/src/services/: task_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_models.py
dapr/: config.yaml
dapr/components/: pubsub.yaml  statestore.yaml
digitalocean/: deploy.sh
digitalocean/k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml
frontend/: .dockerignore  .vercelignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  vercel.json  vitest.config.ts
helm/todo-app/: Chart.yaml  values-dev.yaml  values.yaml
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml
kafka/: docker-compose.kafka.yml
kagent/: config.yaml
kubectl-ai/: config.yaml
scripts/: minikube-deploy.sh  minikube-setup.sh  minikube-teardown.sh
src/: __init__.py  __main__.py
tests/: __init__.py
todo_app/: README.md
(+72 files in other folders)
